--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^4.12.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
