--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-image": "~1.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^10.1.0",
+    "immer": "^10.0.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.2",
