--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@eva-design/eva": "^2.1.1",
@@ -44,7 +45,10 @@
     "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "eslint": "^8.47.0",
+    "eslint-config-universe": "^12.0.0"
   },
   "private": true
 }
