--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "@babel/core": "^7.12.9",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "eslint": "^8.47.0",
-    "eslint-config-universe": "^12.0.0"
+    "eslint-config-universe": "^12.0.0",
+    "reactotron-react-native": "^5.0.3"
   },
   "private": true
 }
