--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-image": "~1.0.0",
     "expo-status-bar": "~1.4.2",
     "firebase": "^10.1.0",
+    "formik": "^2.4.3",
     "immer": "^10.0.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -42,7 +43,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
